--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,151 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-body{
-    background: #071025;
-    font-family: 'Roboto', sans-serif;
-}
-
-h1 {
-    font-size: 32px;
-    color: #7a89d4;
-    margin-top: 24px;
-    margin-bottom: 8px;
-}
-
-p {
-    font-family: 'Roboto Mono', monospace;
-    font-weight: 300;
-    color:#7a89d4;
-    opacity: 0.8;
-    font-size: 16px;
-}
-
-.container {
-    text-align: center;
-    width: 300px;
-    padding: 3rem 3.0rem ;
-    margin: 60px auto;
-    background: #0a183a;
-    box-shadow: 0.5px 0.5px 35px 0.5px rgba(0, 0, 0, 1);
-    border-radius: 20px;
-}
-
-
-img {
-    width: 300%;
-}
-
-img.avatar {
-    border-radius: 50%;
-    width: 180px;
-    height: 180px;
-    padding: 7px;
-    border: #1b40d3 solid 4px
-}
-
-img.logo {
-    width: 16px;
-    height: 16px;
-    padding: 3.7px;
-}
-
-
-ul {
-    list-style: none;
-    margin: 48px 0;
-}
-
-
-ul li a {
-    height: 53px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #364fc7;
-    color: black;
-    text-transform: uppercase;
-    font-size: 14px;
-
-    margin-bottom: 16px ;
-    border-radius: 6px;
-
-    transition: background 400ms;
-}
-
-ul li a:hover {
-    background: #4b60c9;
-}
-
-footer {
-    font-weight: 500;
-    font-size: 12px;
-    color: #7a89d4;
-    opacity: 0.6;
-}
-
-footer a {
-    color: #7a89d4;
+    /* Seletores gerais */
+    * {
+        margin: 0;
+        padding: 0;
+    }
     
-}
+    html {
+        /* a cada 1rem será considera 10px */
+        font-size: 62.5%;
+    }
+    
+    /*-----------------------------------------------------------------*/
+    
+        /* variáveis */
+    .dark-blue {
+        --background-color: #071025;
+        --container-background-color: #0a183a;
+        --primary-color: #7a89d4;
+        --text-color: black;
+        --avatar-color: #1b40d3;
+        --background-links-color: #364fc7;
+        --hover-color: #4b60c9;
+    }
+    
+    .dark-purple {
+        --background-color: #16072a;
+        --container-background-color: #1d0830;
+        --primary-color: #7f5aa8;
+        --text-color: black;
+        --avatar-color: #7f5aa8;
+        --background-links-color: #8952c9;
+        --hover-color: #8B008B;
+    }
+    
+    /*-----------------------------------------------------------------*/
+    
+    a {
+        text-decoration: none;
+    }
+    
+    body{
+        background: var(--background-color);
+        font-family: 'Roboto', sans-serif;
+    }
+    
+    .container {
+        text-align: center;
+        width: 300px;
+        padding: 3rem 3.0rem ;
+        margin: 6.0rem auto 1.2rem;
+        background: var(--container-background-color);
+        box-shadow: 0.5px 0.5px 35px 0.5px rgba(0, 0, 0, 1);
+        border-radius: 20px;
+    }
+    
+    
+    img {
+        width: 300%;
+    }
+    
+    img.avatar {
+        border-radius: 50%;
+        width: 180px;
+        height: 180px;
+        padding: 7px;
+        border: var(--avatar-color) solid 4px;
+    }
+    
+    h1 {
+        font-size: 3.2rem;
+        color: var(--primary-color);
+        margin-top: 24px;
+        margin-bottom: 8px;
+    }
+    
+    p {
+        font-family: 'Roboto Mono', monospace;
+        font-weight: 300;
+        color: var(--primary-color);
+        opacity: 0.8;
+        font-size: 1.6rem;
+    }
+    
+    
+    img.logo {
+        width: 1.6rem;
+        height: 1.6rem;
+        padding: 3.7px;
+    }
+    
+    
+    ul {
+        list-style: none;
+        margin: 4.8rem 0;
+    }
+    
+    
+    ul li a {
+        height: 5.3rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: var(--background-links-color);
+        color: black;
+        text-transform: uppercase;
+        font-size: 1.4rem;
+    
+        margin-bottom: 1.6rem ;
+        border-radius: 0.6rem;
+    
+        transition: background 400ms;
+    }
+    
+    ul li a:hover {
+        background: var(--hover-color) ;
+    }
+    
+    /* rodapé do conteudo */
+    footer {
+        font-weight: 500;
+        font-size: 1.2rem;
+        color: var(--primary-color);
+        opacity: 0.6;
+    }
+    
+    footer a {
+        color: var(--primary-color);
+    }
+    
+    /*-----------------------------------------------------------------*/
+    
+    /* botão troca de tema */
+    div, .button {
+        text-align: center;
+        margin-left: 30rem;
+    }
+    
+    button {
+        border: none;
+        max-width: 5em;
+    }
+    
+    button, img{
+        width: 50%;
+        border-radius: 40%;
+    }
+    
+    #switch-theme-button {
+        background-color: transparent;
+        cursor:pointer;
+    }
